# Event3DGS

./: README.md  dataloader.py  environment.yml  pyproject.toml  report.md
data/drums/pose/: r_00000.txt  r_00002.txt  r_00007.txt  r_00010.txt  r_00013.txt  r_00014.txt  r_00015.txt  r_00019.txt  r_00020.txt  r_00025.txt  r_00027.txt  r_00028.txt  r_00036.txt  r_00038.txt  r_00051.txt  r_00057.txt  r_00060.txt  r_00065.txt  r_00066.txt  r_00067.txt  r_00072.txt  r_00075.txt  r_00076.txt  r_00077.txt  r_00079.txt  r_00085.txt  r_00086.txt  r_00087.txt  r_00089.txt  r_00090.txt  r_00096.txt  r_00097.txt  r_00098.txt  r_00099.txt  r_00100.txt  r_00101.txt  r_00105.txt  r_00106.txt  r_00112.txt  r_00115.txt  (+278 more)
data/lego/pose/: r_00003.txt  r_00004.txt  r_00008.txt  r_00009.txt  r_00011.txt  r_00017.txt  r_00026.txt  r_00029.txt  r_00034.txt  r_00039.txt  r_00043.txt  r_00045.txt  r_00046.txt  r_00049.txt  r_00053.txt  r_00054.txt  r_00055.txt  r_00061.txt  r_00063.txt  r_00068.txt  r_00069.txt  r_00070.txt  r_00073.txt  r_00074.txt  r_00082.txt  r_00091.txt  r_00092.txt  r_00094.txt  r_00095.txt  r_00104.txt  r_00108.txt  r_00110.txt  r_00111.txt  r_00121.txt  r_00124.txt  (+317 more)
esplatfacto/: data_loader_split.py  ddp_model.py  ddp_train_3dgs.py  e3dgs_config.py  esplatfacto.py  esplatfacto_config.py  esplatfacto_pipeline.py  temp.py  utils.py
esplatfacto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
esplatfacto/data/: base_datamanager.py  base_dataset.py  esplatfacto_datamanager.py  esplatfacto_dataparser.py  event_nerfstudio_dataparser.py
(+347 files in other folders)
