[project]
name = "esplatfacto"
version = "0.0.2"

dependencies=[
    "numpy",
    "gsplat==0.1.10",
    "imageio",
    "nerfstudio==1.0.3"
]

[tool.setuptools.packages.find]
include = ["esplatfacto*"]

[project.entry-points.'nerfstudio.method_configs']
esplatfacto = 'esplatfacto.esplatfacto_config:esplatfacto_method'
esplatfacto_big = 'esplatfacto.esplatfacto_config:esplatfacto_method_big'
esplatfacto_lite = 'esplatfacto.esplatfacto_config:esplatfacto_method_lite'